Fixed video buttons alignment and recommendations

--- a/index.css
+++ b/index.css
@@ -105,14 +105,29 @@ iframe {
 
 .videoDetails {
   font-family: 'Roboto';font-size: 16px;
-  border: solid white;
+  border: solid white 1px;
 }
 
 .videoLikes {
+  display: inline;
   float: right;
-  display: inline-block;
-  border: solid white;
+  color: #e5e5e5;
+  border: solid white 1px;
+  font-size: 20px;
 }
+
+.thumbsUp {
+  margin-right: 20px;
+}
+
+.thumbsDown {
+  margin-right: 20px;
+}
+
+.share {
+  margin-right: 20px;
+}
+
 
 
 #comments {
@@ -132,7 +147,6 @@ iframe {
 
 .bigBox{
   height:120px;
-
 }
 
 .boxImage {
@@ -143,7 +157,7 @@ iframe {
 }
 .boxText {
   margin-left: 150px;
-  font-family: 'Roboto';font-size: 16px;
+  font-family: 'Roboto';font-size: 14px;
 }
 
 .commentImage {
